# despot

./: .gitignore  .gitmodules
CPP/: CMakeLists.txt
CPP/examples/cpp_models/adventurer/: CMakeLists.txt
CPP/examples/cpp_models/adventurer/src/: main.cpp
CPP/examples/cpp_models/bridge/: CMakeLists.txt
CPP/examples/cpp_models/chain/: CMakeLists.txt
CPP/examples/cpp_models/navigation/: CMakeLists.txt
CPP/examples/cpp_models/pocman/: CMakeLists.txt
CPP/examples/cpp_models/reg_demo/: CMakeLists.txt
CPP/examples/cpp_models/rock_sample/: CMakeLists.txt
CPP/examples/cpp_models/simple_rock_sample/: CMakeLists.txt
CPP/examples/cpp_models/tag/: CMakeLists.txt
CPP/examples/cpp_models/tag/src/tag/: tag.cpp
CPP/examples/cpp_models/tiger/: CMakeLists.txt
CPP/examples/pomdpx_models/: CMakeLists.txt
CPP/include/despot/: NN.h  plannerbase.h  python_boost.h
CPP/include/despot/core/: node.h
CPP/include/despot/interface/: pomdp.h
CPP/include/despot/solver/: despot.h  pomcp.h
CPP/include/despot/util/: logging.h  optionparser.h
CPP/src/: NN.cpp  evaluator.cpp  logger.cpp  planner.cpp  plannerbase.cpp  python_boost.cpp
CPP/src/core/: mdp.cpp  node.cpp  particle_belief.cpp  solver.cpp
CPP/src/pomdpx/: pomdpx.cpp
CPP/src/pomdpx/parser/: parser.cpp
CPP/src/solver/: aems.cpp  despot.cpp  pomcp.cpp
SARSOP/: reformat_sarsop_out.py
Value_MDP/: Q_learning.py  Tag_env_mdp.py  coord.py  policy_iteration.py
python/: main.py  utils.py
